@@ -1,3 +1,7 @@
+2004-10-31  Sven Neumann  <sven@gimp.org>
+
+	* de.po: updated.
+
 2004-10-27  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
