@@ -1,5 +1,10 @@
 2004-10-31  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/gimpmemsizeentry.c: don't use camel case in memory
+	size identifiers.
+
+2004-10-31  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/gimpimageeditor.c (gimp_image_editor_set_context):
 	set the active image. Fixes bug #156942.
 
